# atsd-odbc

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MACOS.md  README.md  format_sources  release_macos.sh
.github/workflows/: ccpp.yml
cmake/: find_poco.cmake  find_ssl.cmake
contrib/: CMakeLists.txt
debian/: .pbuilderrc  atsd-odbc.postinst  atsd-odbc.prerm  changelog  control  rules
driver/: CMakeLists.txt  config.cpp  config.h  connection.cpp  connection.h  environment.cpp  environment.h  http_connection.cpp  http_connection.h  info.cpp  ini_defines.h  long_running_connection.h  odbc.cpp  odbc.ini  statement.cpp  statement.h  unixodbc.ini  web_socket_connection.cpp  web_socket_connection.h
driver/escaping/: CMakeLists.txt  escape_sequences.cpp  function_declare.h  lexer.cpp  lexer_declare.h  state_machine.cpp  state_machine.h
driver/log/: CMakeLists.txt  log.cpp  log.h
driver/ut/: CMakeLists.txt
driver/win/: CMakeLists.txt  export.def  exportw.def  resource.h  resource.rc  setup.cpp  version.h
vs/: build_cmake.bat  build_vs.bat  build_vs_log.bat  dev_cmake_install_debug.bat  dev_vs_install_debug.bat
vs/driver32/: driver32.vcxproj  driver32.vcxproj.filters
vs/driver32w/: driver32w.vcxproj  driver32w.vcxproj.filters
vs/driver64/: driver64.vcxproj  driver64.vcxproj.filters
vs/driver64w/: driver64w.vcxproj  driver64w.vcxproj.filters
vs/installer32/: Product.wxs  installer32.wixproj  license.rtf
vs/installer64/: Product.wxs  installer64.wixproj
